# NF

./: .gitignore  BCF_AMF_AUSF_Audit_Architecture_Report.md  docker-oai-ext-dn.yaml  fake_gnb.py
amf/src/amf-app/: CMakeLists.txt  amf_app.cpp  amf_app.hpp  amf_config.cpp  amf_config.hpp  amf_event_sig.hpp  amf_n1.cpp  amf_n1.hpp  amf_n2.cpp  amf_n2.hpp  amf_profile.cpp  amf_profile.hpp  amf_sbi.cpp  amf_sbi.hpp  amf_statistics.cpp  amf_statistics.hpp  authentication.cpp  authentication.hpp  did_proxy_client.cpp  did_proxy_client.hpp
amf/src/amf-app/did_auth/: CMakeLists.txt  bcf_auth_client.cpp  bcf_auth_client.hpp  bcf_interface.cpp  bcf_interface.hpp  did_auth.cpp  did_auth.hpp  did_auth_http_handler.cpp  did_auth_http_handler.hpp  did_auth_precheck.cpp  did_auth_precheck.hpp  did_auth_types.cpp  did_auth_types.hpp  did_crypto.cpp  did_crypto.hpp  did_nonce_manager.cpp  did_nonce_manager.hpp  did_session_manager.cpp  did_session_manager.hpp  hardware_id.cpp  hardware_id.hpp  itti_msg_did_auth.hpp  signature_utils.cpp  signature_utils.hpp  target_nf_cache.hpp
amf/src/bcf/: CMakeLists.txt  bcf_client.cpp  bcf_nf_discovery.cpp  bcf_nf_discovery.hpp
amf/src/nas/: CMakeLists.txt
amf/src/ngap/: CMakeLists.txt  ngap_app.cpp  ngap_app.hpp  ngap_message_callback.hpp
amf/src/sbi/: CMakeLists.txt  amf_http1_server.cpp  amf_http1_server.hpp  amf_http2_server.cpp  amf_http2_server.hpp
amf/src/sbi/api/: AMFConfigurationApi.cpp  AMFConfigurationApi.h  DIDAuthApi.cpp  DIDAuthApi.h  IndividualSubscriptionDocumentApi.cpp  IndividualSubscriptionDocumentApi.h  IndividualSubscriptionDocumentApiEventExposure.cpp  IndividualSubscriptionDocumentApiEventExposure.h  IndividualUeContextDocumentApi.cpp  IndividualUeContextDocumentApi.h  N1MessageNotifyApi.cpp  N1MessageNotifyApi.h  N1N2IndividualSubscriptionDocumentApi.cpp  N1N2IndividualSubscriptionDocumentApi.h  N1N2MessageCollectionDocumentApi.cpp  N1N2MessageCollectionDocumentApi.h  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApi.cpp  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApi.h  NonUEN2MessageNotificationIndividualSubscriptionDocumentApi.cpp  NonUEN2MessageNotificationIndividualSubscriptionDocumentApi.h  NonUEN2MessagesCollectionDocumentApi.cpp  NonUEN2MessagesCollectionDocumentApi.h  NonUEN2MessagesSubscriptionsCollectionDocumentApi.cpp  NonUEN2MessagesSubscriptionsCollectionDocumentApi.h  StatusNotifyApi.cpp  StatusNotifyApi.h  SubscriptionsCollectionDocumentApi.cpp  SubscriptionsCollectionDocumentApi.h  SubscriptionsCollectionDocumentApiEventExposure.cpp  SubscriptionsCollectionDocumentApiEventExposure.h
amf/src/sbi/impl/: AMFConfigurationApiImpl.cpp  AMFConfigurationApiImpl.h  DIDAuthApiImpl.cpp  DIDAuthApiImpl.h  IndividualSubscriptionDocumentApiImpl.cpp  IndividualSubscriptionDocumentApiImpl.h  IndividualSubscriptionDocumentApiImplEventExposure.cpp  IndividualSubscriptionDocumentApiImplEventExposure.h  IndividualUeContextDocumentApiImpl.cpp  IndividualUeContextDocumentApiImpl.h  N1MessageNotifyApiImpl.cpp  N1MessageNotifyApiImpl.h  N1N2IndividualSubscriptionDocumentApiImpl.cpp  N1N2MessageCollectionDocumentApiImpl.cpp  N1N2MessageCollectionDocumentApiImpl.h  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApiImpl.cpp  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApiImpl.h  NonUEN2MessageNotificationIndividualSubscriptionDocumentApiImpl.cpp  NonUEN2MessagesCollectionDocumentApiImpl.cpp  NonUEN2MessagesCollectionDocumentApiImpl.h  NonUEN2MessagesSubscriptionsCollectionDocumentApiImpl.cpp  NonUEN2MessagesSubscriptionsCollectionDocumentApiImpl.h  StatusNotifyApiImpl.cpp  StatusNotifyApiImpl.h  SubscriptionsCollectionDocumentApiImpl.cpp  SubscriptionsCollectionDocumentApiImpl.h  SubscriptionsCollectionDocumentApiImplEventExposure.cpp  SubscriptionsCollectionDocumentApiImplEventExposure.h
amf/src/utils/: 3gpp_conversions.cpp  3gpp_conversions.hpp  CMakeLists.txt  amf_conversions.cpp  amf_conversions.hpp
ausf/src/api_server/: CMakeLists.txt  ausf-http2-server.h  ausf_http2-server.cpp  ausf_token_auth.cpp  ausf_token_auth.hpp
ausf/src/api_server/api/: DefaultApi.cpp  DefaultApi.h
ausf/src/api_server/impl/: AuthenticationResultDeletionApiImpl.cpp  AuthenticationResultDeletionApiImpl.h  DefaultApiImpl.cpp  DefaultApiImpl.h
ausf/src/ausf_app/: CMakeLists.txt  ausf_app.cpp  ausf_app.hpp  ausf_bcf.cpp  ausf_bcf.hpp  ausf_config.cpp  ausf_config.hpp  ausf_config_yaml.cpp  ausf_config_yaml.hpp  ausf_event.cpp  ausf_event.hpp  ausf_event_sig.hpp  ausf_network_support.hpp  ausf_nrf.cpp  ausf_nrf.hpp  ausf_profile.cpp  ausf_profile.hpp  task_manager.cpp  task_manager.hpp
ausf/src/ausf_app/did_auth/: CMakeLists.txt  bcf_auth_client.cpp  bcf_auth_client.hpp  bcf_interface.cpp  bcf_interface.hpp  bcf_token_verifier.cpp  bcf_token_verifier.hpp  did_auth.cpp  did_auth.hpp  did_auth_types.cpp  did_auth_types.hpp  did_crypto.cpp  did_crypto.hpp  hardware_id.cpp  hardware_id.hpp  signature_utils.cpp  signature_utils.hpp
ausf/src/common-src/ngap/: CMakeLists.txt
ausf/src/common-src/ngap/libngap_ies/: CMakeLists.txt
ausf/src/common-src/ngap/ngap_ies/: AdditionalQosFlowInformation.cpp  AdditionalQosFlowInformation.hpp  AllocationAndRetentionPriority.cpp  AllowedNssai.cpp  AmfName.hpp  AmfRegionId.cpp  AmfUeNgapId.hpp  AssociatedQosFlowItem.cpp  AssociatedQosFlowList.hpp  AveragingWindow.hpp  BroadcastPlmnItem.cpp  CountValueForPdcpSn18.hpp  DataForwardingNotPossible.hpp  DrbStatusDl.cpp  DrbStatusDl.hpp  DrbStatusUl.hpp  DrbStatusUl12.hpp  DrbStatusUl18.cpp  DrbsSubjectToStatusTransferItem.cpp  DrbsSubjectToStatusTransferItem.hpp  DrbsSubjectToStatusTransferList.cpp  Dynamic5qiDescriptor.cpp  EutraCellIdentity.cpp  EutraCgi.cpp  EutraCgi.hpp  FiveQI.hpp  (+128 more)
ausf/src/common-src/test/: CMakeLists.txt
ausf/src/common-src/utils/: 3gpp_conversions.cpp  3gpp_conversions.hpp  CMakeLists.txt  conversions.cpp  conversions.hpp  fqdn.cpp  fqdn.hpp  if.cpp  output_wrapper.hpp  pid_file.hpp  sdf_conversions.cpp  string.cpp  uint_generator.hpp  utils.cpp
ausf/src/oai_ausf/: CMakeLists.txt  main.cpp
(+6141 files in other folders)
